tests/NormalTests/paczka1/fuzzy1/78335159.err
Error in line 7: 0k2MGajDi A389 318Z4
Error in line 13: QQW A305 60,6
Error in line 14: QQW S774 69,5
Error in line 2: 0k2MGajDi A389 83,8
Error in line 6: S774 S774 31,2
Error in line 31: QQW S774 65,0
Error in line 36: 1IwCLjWzXZ S558 36,5
